feat(exp-mk3)!: unify collection syntax and types
Align grammar, source AST, corpus, public type contracts, built-ins, Java metadata, and providers around one canonical collection identity.

BREAKING CHANGE: Replace VectorType with CollectionType and migrate vector literals and navigated method nodes to CollectionLiteralNode and unified call arguments.

Refs: #66

Closes #67